[package]
name = "pog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
tokio = { version = "1.25.0", features = ["full"] }
bytemuck = "1.13.0"
cgmath = "0.18.0"
noise = "0.8.2"
serde = "1.0"
