[package]
name = "pog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.1"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
tokio = { version = "1.25.0", features = ["full"] }
bytemuck = "1.13.0"
cgmath = "0.18.0"
noise = "0.8.2"
serde = "1.0"
splines = "4.2.0"
egui = "0.21.0"
egui-wgpu = "0.21.0"
egui-winit = "0.21.1"
wgsl_preprocessor = "1.1.3"
legion = "0.4.0"
